# miniBlog

./: .gitignore  .prettierrc.js  TODO.txt  index.html  insertdocs.txt  package-lock.json  package.json
backend/: .gitignore  =1.0.0  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0dd8cdaf17dc_add_is_admin_to_users_and_projects_table.py  db918c2c6f88_add_image_data_to_posts_and_projects.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py  comments.py  image_ai.py  posts.py  projects.py  tags.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: engine.py  models.py  prisma_client.py
backend/app/middleware/: cors.py  rate_limit.py  request_id.py  security_headers.py
backend/app/repositories/: comment_repository.py  post_repository.py  project_repository.py  token_repository.py  user_repository.py
backend/app/schemas/: auth.py  comment.py  common.py  post.py  project.py
backend/app/services/: auth_service.py  comment_service.py  image_ai_service.py  post_service.py  project_service.py
backend/migrations/: firebase_to_postgres.py
backend/prisma/: schema.prisma
backend/scripts/: generate_images.py  generate_secret.py  init_db.py  reset_db.py  seed.py  seed_projects.py  seed_projects.sql
backend/tests/: conftest.py
backend/tests/unit/: test_security.py
firebase/: config.ts
frontend/: Dockerfile  eslint.config.mjs  index.html  (+5 more)
(+63 files in other folders)
